# tracker

./: CMakeLists.txt  README.md
camera/: CMakeLists.txt  camera.cpp  camera.hpp
core/: CMakeLists.txt  blob.cpp  blob.hpp  display.cpp  display.hpp  fusion.cpp  fusion.hpp  main.cpp  registration.cpp  registration.hpp  render.cpp  render.hpp  robot-projection.cpp  voxel-data-file.hpp
resources/: config.json
resources/irb6700/: Notes.txt  irb6700.urdf
resources/person/: left_arm.stl  person.stl  person.urdf  right_arm.stl
robot/: CMakeLists.txt  robot.cpp  robot.hpp  test.cpp  urdf.cpp
sim/: CMakeLists.txt  main.cpp
static/: CMakeLists.txt  mesh-app.cpp  register-app.cpp  robot-sprite-app.cpp  robot-sprite.cpp  robot-sprite.hpp  voxel-data-app.cpp  voxel-data.cpp  voxel-data.hpp
util/: CMakeLists.txt  command-test.cpp  command.cpp  command.hpp  constant.hpp  cruft.cpp  cruft.hpp  directions.cpp  directions.hpp  distance-map.cpp  distance-map.hpp  hypersphere-5-points.cpp  json-comment.cpp  mesh.cpp  mesh.hpp  pcd-viewer.cpp  pixel-test.cpp  pixel.cpp  pixel.hpp  raster.cpp  raster.hpp  socket.cpp  socket.hpp  util.hpp
